[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "pyimg4"
version = "0.1.1"
description = "A Python library for manipulating IMG4, IM4M, and IM4P files."
readme = "README.md"
authors = ["Mathieu Renard <mathieu.renard@gotohack.org>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/gotohack/pyimg4"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
packages = [
    { include = "pyimg4" }
]

[tool.poetry.dependencies]
python = "^3.7"
scapy = "*"

[tool.poetry.dev-dependencies]

